--- a/telephones.html
+++ b/telephones.html
@@ -48,7 +48,7 @@
         <div class="products-grid">
             <!-- Produit 1 -->
             <div class="product-card">
-                <img src="image/Galaxy.jpg" alt="Téléphone 1">
+                <img src="image/galaxy.jpg" alt="Téléphone 1">
                 <h3>Galaxy S24</h3>
                 <p>256gb,Black</p>
                 <p class="price">799 €</p>
@@ -56,7 +56,7 @@
                     data-id="1"
                     data-name="Galaxy S24"
                     data-price="799"
-                    data-image="image/Galaxy.jpg">
+                    data-image="image/galaxy.jpg">
                     Ajouter au panier
                 </button>
             </div>
