--- a/accessoires.html
+++ b/accessoires.html
@@ -50,7 +50,7 @@
             <div class="product-card">
                 <img src="image/usbc.jpg" alt="Accessoire 1">
                 <h3>Chargeur Rapide USB-C</h3>
-                <p class="price">25 €</p>
+                <p class="price">25 $</p>
                 <button class="add-to-cart"
                 data-id="600"
                 data-name="Chargeur Rapide USB-C"
@@ -62,7 +62,7 @@
             <div class="product-card">
                 <img src="image/support.jpg" alt="Accessoire 2">
                 <h3>Support téléphone voiture</h3>
-                <p class="price">15 €</p>
+                <p class="price">15 $</p>
                 <button class="add-to-cart"
                 data-id="601"
                 data-name="Support voiture"
@@ -74,7 +74,7 @@
             <div class="product-card">
                 <img src="image/cleusb.jpg" alt="Accessoire 3">
                 <h3>Clé USB 128Go</h3>
-                <p class="price">19 €</p>
+                <p class="price">19 $</p>
                 <button class="add-to-cart"
                 data-id="602"
                 data-name="Clé USB 128Go"
