--- a/laptops.html
+++ b/laptops.html
@@ -46,40 +46,65 @@
         <h2>Nos Laptops</h2>
         <div class="products-grid">
             <!-- Laptop 1 -->
-            <div class="product-card">
-                <img src="image/macbookRm2.jpg" alt="Laptop 1">
-                <h3>MacBook Air M2</h3>
-                <p class="price">1299 €</p>
-                <button class="add-to-cart"
-                data-id="400"
-                data-name="MacBook Air M2"
-                data-image="image/macbookRm2.jpg"
-                data-price="1299">Ajouter au panier</button>
-            </div>
+                <div class="product-card">
+                    <img src="image/macbookRm2.jpg" alt="Laptop 1">
+                    <h3>MacBook Air M2</h3>
+                    <label for="color-macbook">Couleur :</label>
+                    <select class="color-select" id="color-macbook">
+                        <option value="Gris sidéral">Gris sidéral</option>
+                        <option value="Argent">Argent</option>
+                        <option value="Or">Or</option>
+                    </select>
+                    <p class="price">1299 $</p>
+                    <button class="add-to-cart"
+                        data-id="400"
+                        data-name="MacBook Air M2"
+                        data-image="image/macbookRm2.jpg"
+                        data-price="1299">
+                        Ajouter au panier
+                    </button>
+                </div>
 
-            <!-- Laptop 2 -->
-            <div class="product-card">
-                <img src="image/dellxps.jpg" alt="Laptop 2">
-                <h3>Dell XPS 13</h3>
-                <p class="price">1199 €</p>
-                <button class="add-to-cart"
-                data-id="401"
-                data-name="Dell XPS 13"
-                data-image="image/dellxps.jpg"
-                data-price="1199">Ajouter au panier</button>
-            </div>
+                <!-- Laptop 2 -->
+                <div class="product-card">
+                    <img src="image/dellxps.jpg" alt="Laptop 2">
+                    <h3>Dell XPS 13</h3>
+                    <label for="color-dell">Couleur :</label>
+                    <select class="color-select" id="color-dell">
+                        <option value="Noir">Noir</option>
+                        <option value="Platine">Platine</option>
+                        <option value="Blanc">Blanc</option>
+                    </select>
+                    <p class="price">1199 $</p>
+                    <button class="add-to-cart"
+                        data-id="401"
+                        data-name="Dell XPS 13"
+                        data-image="image/dellxps.jpg"
+                        data-price="1199">
+                        Ajouter au panier
+                    </button>
+                </div>
 
-            <!-- Laptop 3 -->
-            <div class="product-card">
-                <img src="image/asus.jpg" alt="Laptop 3">
-                <h3>Asus ROG Zephyrus</h3>
-                <p class="price">1499 €</p>
-                <button class="add-to-cart"
-                data-id="402"
-                data-name="Asus ROG Zephyrus"
-                data-image="image/asus.jpg"
-                data-price="1499">Ajouter au panier</button>
-            </div>
+                <!-- Laptop 3 -->
+                <div class="product-card">
+                    <img src="image/asus.jpg" alt="Laptop 3">
+                    <h3>Asus ROG Zephyrus</h3>
+                    <label for="color-asus">Couleur :</label>
+                    <select class="color-select" id="color-asus">
+                        <option value="Noir">Noir</option>
+                        <option value="Gris acier">Gris acier</option>
+                        <option value="Blanc">Blanc</option>
+                    </select>
+                    <p class="price">1499 $</p>
+                    <button class="add-to-cart"
+                        data-id="402"
+                        data-name="Asus ROG Zephyrus"
+                        data-image="image/asus.jpg"
+                        data-price="1499">
+                        Ajouter au panier
+                    </button>
+                </div>
+
         </div>
     </main>
 
