--- a/speakers.html
+++ b/speakers.html
@@ -52,7 +52,7 @@
        <div class="product-card">
         <img src="image/sonos.jpg" alt="Speaker Bluetooth 1">
         <h3>Sonos Move lunar</h3>
-        <p class="price">39 €</p>
+        <p class="price">39 $</p>
         <button class="add-to-cart"
         data-id="201"
         data-name="Mini Speaker Bluetooth"
@@ -64,7 +64,7 @@
       <div class="product-card">
         <img src="image/jblflip.jpg" alt="Speaker Bluetooth 2">
         <h3>JBL flip 6</h3>
-        <p class="price">75 €</p>
+        <p class="price">110 $</p>
         <button class="add-to-cart"
         data-id="202"
         data-name="Speaker JBL Portable"
@@ -76,7 +76,7 @@
       <div class="product-card">
         <img src="image/bose.jpg" alt="Speaker Bluetooth 3">
         <h3>Bose S1 Pro</h3>
-        <p class="price">120 €</p>
+        <p class="price">120 $</p>
         <button class="add-to-cart"
         data-id="203"
         data-name="Enceinte Bose"
