--- a/about.html
+++ b/about.html
@@ -40,12 +40,47 @@
 
   <!-- Section principale -->
   <main>
-    <section class="about-section" data-aos="fade-up">
-      <h2>À propos de TechZone</h2>
-      <p>TechZone est votre boutique de confiance spécialisée dans les téléphones, ordinateurs portables et accessoires électroniques.</p>
-      <p>Notre mission est de fournir des produits de qualité à des prix compétitifs avec un service client exceptionnel.</p>
-      <p>Depuis notre création, nous avons aidé des centaines de clients à rester connectés avec style.</p>
-    </section>
+    <section class="about-hero">
+      <div class="about-hero-text">
+          <h1>Notre histoire</h1>
+          <p>
+              Fondée par des passionnés de technologie, <strong>PCXpress</strong> est née d’un désir clair : 
+              offrir aux clients les meilleurs produits électroniques, au meilleur prix, avec un service irréprochable. 
+              Depuis nos débuts, nous nous engageons à fournir des appareils de qualité (téléphones, ordinateurs, accessoires, etc...)
+              et à bâtir une relation de confiance avec chaque client.
+          </p>
+      </div>
+  </section>
+
+  <section class="mission-section">
+      <h2>Notre mission</h2>
+      <p>
+          Chez PCXpress, nous croyons que la technologie doit être accessible, fiable et à la portée de tous.
+          Nous sélectionnons soigneusement chaque produit pour garantir performance et durabilité. 
+          Notre mission est de vous accompagner dans votre quotidien numérique, avec passion et expertise.
+      </p>
+  </section>
+
+  <section class="team-section">
+      <h2>Notre équipe</h2>
+      <div class="team-grid">
+          <div class="team-member">
+              <img src="image/equipe1.jpg" alt="Membre 1">
+              <h3>Rania L.</h3>
+              <p>Fondatrice & CEO. Visionnaire, elle veille à ce que l'expérience client soit toujours au cœur de PCXpress.</p>
+          </div>
+          <div class="team-member">
+              <img src="image/equipe2.jpg" alt="Membre 2">
+              <h3>Yanis K.</h3>
+              <p>Responsable Produits. Expert en nouvelles technologies, il sélectionne avec soin les meilleures références du marché.</p>
+          </div>
+          <div class="team-member">
+              <img src="image/equipe3.jpg" alt="Membre 3">
+              <h3>Sarah D.</h3>
+              <p>Service Client. Disponible, souriante et à l’écoute, elle s’assure de votre entière satisfaction à chaque étape.</p>
+          </div>
+      </div>
+  </section>
   </main>
 
   <!-- Footer -->
