--- a/about.html
+++ b/about.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PcXpress</title>
+  <title>PCXPRESS</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="image/icon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="libs/aos/aos.css" />
 </head>
