--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PcXpress</title>
+    <title>PCXPRESS</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="image/icon.png" type="image/x-icon">
+
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
