--- a/laptops.html
+++ b/laptops.html
@@ -25,6 +25,10 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="panier.html" class="cart-link">
+                <img src="image/panier.png" alt="Panier" width="24" height="24" />
+                Panier<span id="cart-count" class="cart-count">0</span>
+              </a></li>
           </ul>
          
         </nav>
@@ -37,7 +41,7 @@
             <li><a href="laptops.html" class="active">Laptops</a></li>
             <li><a href="accessoires.html">Accessoires</a></li>
             <li><a href="speakers.html">Haut-parleurs</a></li>
-            <a href="panier.html">🧺Panier🛒</a>
+            <!-- <a href="panier.html">🧺Panier🛒</a> -->
         </ul>
     </nav>
 
@@ -116,17 +120,34 @@
                 <a href="about.html">À propos</a>
                 <a href="contact.html">Contact</a>
                 <a href="panier.html">Panier</a>
+                <a href="terms.html">Conditions d'utilisation</a>
+                <a href="privacy.html">Politique de confidentialité</a>
             </div>
             <div class="footer-contact">
-                <p>Email : kieftraphterjoly@gmail.com</p>
-                <p>Téléphone : 44795902</p>
+                <p><strong>Contactez-nous sur</strong></p>
+                <p>Email : <a href="mailto:kieftraphterjoly@gmail.com">kieftraphterjoly@gmail.com</a></p>
+                <p>Téléphone : <a href="tel:+44795902">+509 44795902</a></p>
             </div>
-            <div class="footer-socials">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+            <div class="footer-icons">
+              <p><strong>Suivez-nous sur</strong></p>
+                  <a href="https://www.youtube.com/@rakieft" target="_blank" title="YouTube">
+                      <img src="image/youtube.png" alt="YouTube" class="social-icon" width="60" height="50" loading="lazy">
+                  </a>
+                  <a href="https://twitter.com/rakieft" target="_blank" title="Twitter">
+                      <img src="image/twitter.png" alt="Twitter" class="social-icon" width="50" height="50" loading="lazy">
+                  </a>
+                  <a href="https://www.linkedin.com/company/rakieft-webdev" target="_blank" title="LinkedIn">
+                      <img src="image/linkedin.png" alt="LinkedIn" class="social-icon" width="60" height="60" loading="lazy">
+                  </a>
+          </div>
+            <div class="footer-newsletter">
+                <p><strong>Abonnez-vous à notre newsletter</strong></p>
+                <form action="#" method="post">
+                    <input type="email" placeholder="Votre email" required>
+                    <button type="submit">S'abonner</button>
+                </form>
             </div>
-            <p class="copyright">© 2025 Rakieft Webdev</p>
+            <p class="copyright"></p>
         </div>
     </footer>
 
