--- a/laptops.html
+++ b/laptops.html
@@ -27,7 +27,7 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="panier.html" class="cart-link">
                 <img src="image/panier.png" alt="Panier" width="24" height="24" />
-                Panier<span id="cart-count" class="cart-count">0</span>
+                Panier🛒<span id="cart-count" class="cart-count">0</span>
               </a></li>
           </ul>
          
