--- a/speakers.html
+++ b/speakers.html
@@ -52,40 +52,82 @@
     <div class="products-grid">
 
       
-       <!-- Speaker 1 -->
+       <!-- Speaker sonos move -->
        <div class="product-card">
         <img src="image/sonos.jpg" alt="Speaker Bluetooth 1">
-        <h3>Sonos Move lunar</h3>
+        <h3>Sonos Move</h3>
+        <label for="color-asus">Couleur :</label>
+                    <select class="color-select" id="color-asus">
+                        <option value="Blanc">Blanc</option>
+                        <option value="Gris acier">Gris acier</option>
+                        <option value="Noir">Noir</option>
+                    </select>
         <p class="price">39 $</p>
         <button class="add-to-cart"
         data-id="201"
-        data-name="Mini Speaker Bluetooth"
+        data-name="Sonos Move"
         data-price="39"
-        data-image="image/sonos.jpg">Ajouter au panier</button>
+        data-image="image/sonos.jpg">
+        Ajouter au panier</button>
       </div>
 
-      <!-- Speaker 2 -->
+      <!-- Speaker Jbl flip 6 -->
       <div class="product-card">
         <img src="image/jblflip.jpg" alt="Speaker Bluetooth 2">
         <h3>JBL flip 6</h3>
+        <label for="color-asus">Couleur :</label>
+                    <select class="color-select" id="color-asus">
+                        <option value="Bleu">Bleu</option>
+                        <option value="Gris acier">Gris acier</option>
+                        <option value="Rouge">Rouge</option>
+                    </select>
         <p class="price">110 $</p>
         <button class="add-to-cart"
         data-id="202"
         data-name="Speaker JBL Portable"
         data-price="75"
-        data-image="image/jblflip.jpg">Ajouter au panier</button>
+        data-image="image/jblflip.jpg">
+        Ajouter au panier</button>
       </div>
 
-      <!-- Speaker 3 -->
+      <!-- Speaker Bose s1 pro -->
       <div class="product-card">
         <img src="image/bose.jpg" alt="Speaker Bluetooth 3">
         <h3>Bose S1 Pro</h3>
+        <p>Système audio surround Bose pour home cinéma, noir</p>
+        <label for="color-asus">Couleur :</label>
+                    <select class="color-select" id="color-asus">
+                        <!-- <option value="Blanc">Blanc</option>
+                        <option value="Gris acier">Gris acier</option> -->
+                        <option value="Noir">Noir</option>
+                    </select>
         <p class="price">120 $</p>
         <button class="add-to-cart"
         data-id="203"
         data-name="Enceinte Bose"
         data-price="120"
-        data-image="image/bose.jpg">Ajouter au panier</button>
+        data-image="image/bose.jpg">
+        Ajouter au panier</button>
+      </div>
+
+      <!-- speaker sony srs -->
+      <div class="product-card">
+        <img src="image/sonysrs.jpg" alt="Speaker Bluetooth 4">
+        <h3>SONY SRS-XB100</h3>
+        <p>Sans fil Bluetooth, compacte, légère, étanche IP67, avec autonomie de 16 heures.</p>
+        <label for="color-asus">Couleur :</label>
+                    <select class="color-select" id="color-asus">
+                        <option value="Noir">Noir</option>
+                        <option value="Blanc">Blanc</option>
+                        <option value="Rouge">Rouge</option>
+                    </select>
+        <p class="price">60 $</p>
+        <button class="add-to-cart"
+        data-id="202"
+        data-name="SONY SRS-XB100"
+        data-price="60"
+        data-image="image/sonysrs.jpg">
+        Ajouter au panier</button>
       </div>
 
     </div>
