--- a/laptops.html
+++ b/laptops.html
@@ -49,10 +49,11 @@
     <main class="products-section">
         <h2>Nos Laptops</h2>
         <div class="products-grid">
-            <!-- Laptop 1 -->
+            <!-- Laptop macbookRm2 -->
                 <div class="product-card">
                     <img src="image/macbookRm2.jpg" alt="Laptop 1">
                     <h3>MacBook Air M2</h3>
+                    <p>Écran LCD LED Retina 13,6 pouces pour Apple MacBook Air M2 A2681 (2022) EMC 4074.</p>
                     <label for="color-macbook">Couleur :</label>
                     <select class="color-select" id="color-macbook">
                         <option value="Gris sidéral">Gris sidéral</option>
@@ -69,10 +70,11 @@
                     </button>
                 </div>
 
-                <!-- Laptop 2 -->
+                <!-- Laptop dell XPS -->
                 <div class="product-card">
                     <img src="image/dellxps.jpg" alt="Laptop 2">
                     <h3>Dell XPS 13</h3>
+                    <p>Dell XPS 13 9365 2-en-1 Intel Core i7, 13349149 (Core i7 Nordic Multilanguage)</p>
                     <label for="color-dell">Couleur :</label>
                     <select class="color-select" id="color-dell">
                         <option value="Noir">Noir</option>
@@ -89,22 +91,44 @@
                     </button>
                 </div>
 
-                <!-- Laptop 3 -->
+                <!-- Laptop Assus -->
                 <div class="product-card">
                     <img src="image/asus.jpg" alt="Laptop 3">
                     <h3>Asus ROG Zephyrus</h3>
+                    <p>16 pouces WQXGA MiniLED, Intel Core i9-13900H, 32 Go de RAM, 1 To SSD, RTX 4080, Windows 11</p>
                     <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
-                        <option value="Noir">Noir</option>
-                        <option value="Gris acier">Gris acier</option>
                         <option value="Blanc">Blanc</option>
+                        <option value="Gris acier">Gris acier</option>
+                        <option value="Noir">Noir</option>
                     </select>
-                    <p class="price">1499 $</p>
+                    <p class="price">5600 $</p>
                     <button class="add-to-cart"
                         data-id="402"
                         data-name="Asus ROG Zephyrus"
                         data-image="image/asus.jpg"
-                        data-price="1499">
+                        data-price="5600">
+                        Ajouter au panier
+                    </button>
+                </div>
+
+                <!-- laptop lenovo ideapad slim 5 -->
+                <div class="product-card">
+                    <img src="image/lenovoslim5.jpg" alt="Laptop lenovo">
+                    <h3>Lenovo IdeaPad Slim 5</h3>
+                    <p>Écran 16" WUXGA, processeur Intel® Core™ 7 155H, 32 Go de RAM, SSD 1To, Windows 11</p>
+                    <label for="color-lenovo">Couleur :</label>
+                    <select class="color-select" id="color-lenovo">
+                        <option value="Noir">Noir</option>
+                        <option value="Gris acier">Gris acier</option>
+                        <option value="Blanc">Blanc</option>
+                    </select>
+                    <p class="price">779 $</p>
+                    <button class="add-to-cart"
+                        data-id="402"
+                        data-name="lenovo ideapad slim 5"
+                        data-image="image/lenovoslim5.jpg"
+                        data-price="779">
                         Ajouter au panier
                     </button>
                 </div>
