description set up

--- a/laptops.html
+++ b/laptops.html
@@ -53,7 +53,7 @@
                 <div class="product-card">
                     <img src="image/macbookRm2.jpg" alt="Laptop 1">
                     <h3>MacBook Air M2</h3>
-                    <p>Écran LCD LED Retina 13,6 pouces pour Apple MacBook Air M2 A2681 (2022) EMC 4074.</p>
+                    <p class="product-description">Écran LCD LED Retina 13,6 pouces pour Apple MacBook Air M2 A2681 (2022) EMC 4074.</p>
                     <label for="color-macbook">Couleur :</label>
                     <select class="color-select" id="color-macbook">
                         <option value="Gris sidéral">Gris sidéral</option>
@@ -65,7 +65,8 @@
                         data-id="400"
                         data-name="MacBook Air M2"
                         data-image="image/macbookRm2.jpg"
-                        data-price="1299">
+                        data-price="1299"
+                        data-description="Écran LCD LED Retina 13,6 pouces pour Apple MacBook Air M2 A2681 (2022) EMC 4074.">
                         Ajouter au panier
                     </button>
                 </div>
@@ -74,7 +75,7 @@
                 <div class="product-card">
                     <img src="image/dellxps.jpg" alt="Laptop 2">
                     <h3>Dell XPS 13</h3>
-                    <p>Dell XPS 13 9365 2-en-1 Intel Core i7, 13349149 (Core i7 Nordic Multilanguage)</p>
+                    <p class="product-description">Dell XPS 13 9365 2-en-1 Intel Core i7, 13349149 (Core i7 Nordic Multilanguage)</p>
                     <label for="color-dell">Couleur :</label>
                     <select class="color-select" id="color-dell">
                         <option value="Noir">Noir</option>
@@ -86,7 +87,8 @@
                         data-id="401"
                         data-name="Dell XPS 13"
                         data-image="image/dellxps.jpg"
-                        data-price="1199">
+                        data-price="1199"
+                        data-description="Dell XPS 13 9365 2-en-1 Intel Core i7, 13349149 (Core i7 Nordic Multilanguage)">
                         Ajouter au panier
                     </button>
                 </div>
@@ -95,7 +97,7 @@
                 <div class="product-card">
                     <img src="image/asus.jpg" alt="Laptop 3">
                     <h3>Asus ROG Zephyrus</h3>
-                    <p>16 pouces WQXGA MiniLED, Intel Core i9-13900H, 32 Go de RAM, 1 To SSD, RTX 4080, Windows 11</p>
+                    <p class="product-description">16 pouces WQXGA MiniLED, Intel Core i9-13900H, 32 Go de RAM, 1 To SSD, RTX 4080, Windows 11</p>
                     <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
                         <option value="Blanc">Blanc</option>
@@ -107,7 +109,8 @@
                         data-id="402"
                         data-name="Asus ROG Zephyrus"
                         data-image="image/asus.jpg"
-                        data-price="5600">
+                        data-price="5600"
+                        data-description="16 pouces WQXGA MiniLED, Intel Core i9-13900H, 32 Go de RAM, 1 To SSD, RTX 4080, Windows 11">
                         Ajouter au panier
                     </button>
                 </div>
@@ -116,7 +119,7 @@
                 <div class="product-card">
                     <img src="image/lenovoslim5.jpg" alt="Laptop lenovo">
                     <h3>Lenovo IdeaPad Slim 5</h3>
-                    <p>Écran 16" WUXGA, processeur Intel® Core™ 7 155H, 32 Go de RAM, SSD 1To, Windows 11</p>
+                    <p class="product-description">Écran 16" WUXGA, processeur Intel® Core™ 7 155H, 32 Go de RAM, SSD 1To, Windows 11</p>
                     <label for="color-lenovo">Couleur :</label>
                     <select class="color-select" id="color-lenovo">
                         <option value="Noir">Noir</option>
@@ -128,7 +131,8 @@
                         data-id="402"
                         data-name="lenovo ideapad slim 5"
                         data-image="image/lenovoslim5.jpg"
-                        data-price="779">
+                        data-price="779"
+                        data-description="Écran 16 pouces WUXGA, processeur Intel® Core™ 7 155H, 32 Go de RAM, SSD 1To, Windows 11">
                         Ajouter au panier
                     </button>
                 </div>
