--- a/speakers.html
+++ b/speakers.html
@@ -56,6 +56,7 @@
        <div class="product-card">
         <img src="image/sonos.jpg" alt="Speaker Bluetooth 1">
         <h3>Sonos Move</h3>
+        <p class="product-description">Multiroom WiFi et Bluetooth, Air Play 2, Son Clair et Puissant - Assistant Google et Amazon Alexa Intégrés.</p>
         <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
                         <option value="Blanc">Blanc</option>
@@ -75,6 +76,7 @@
       <div class="product-card">
         <img src="image/jblflip.jpg" alt="Speaker Bluetooth 2">
         <h3>JBL flip 6</h3>
+        <p class="product-description">Bluetooth portable avec batterie rechargeable, Étanchéité IPX7, Autonomie de 10h.</p>
         <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
                         <option value="Bleu">Bleu</option>
@@ -86,7 +88,8 @@
         data-id="202"
         data-name="Speaker JBL Portable"
         data-price="75"
-        data-image="image/jblflip.jpg">
+        data-image="image/jblflip.jpg"
+        data-description="Bluetooth portable avec batterie rechargeable, Étanchéité IPX7, Autonomie de 10h.">
         Ajouter au panier</button>
       </div>
 
@@ -94,7 +97,7 @@
       <div class="product-card">
         <img src="image/bose.jpg" alt="Speaker Bluetooth 3">
         <h3>Bose S1 Pro</h3>
-        <p>Système audio surround Bose pour home cinéma, noir</p>
+        <p class="product-description">Système audio surround Bose pour home cinéma, noir</p>
         <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
                         <!-- <option value="Blanc">Blanc</option>
@@ -106,7 +109,8 @@
         data-id="203"
         data-name="Enceinte Bose"
         data-price="120"
-        data-image="image/bose.jpg">
+        data-image="image/bose.jpg"
+        data-description="Système audio surround Bose pour home cinéma, noir." >
         Ajouter au panier</button>
       </div>
 
@@ -114,7 +118,7 @@
       <div class="product-card">
         <img src="image/sonysrs.jpg" alt="Speaker Bluetooth 4">
         <h3>SONY SRS-XB100</h3>
-        <p>Sans fil Bluetooth, compacte, légère, étanche IP67, avec autonomie de 16 heures.</p>
+        <p class="product-description">Sans fil Bluetooth, compacte, légère, étanche IP67, avec autonomie de 16 heures.</p>
         <label for="color-asus">Couleur :</label>
                     <select class="color-select" id="color-asus">
                         <option value="Noir">Noir</option>
@@ -126,7 +130,8 @@
         data-id="202"
         data-name="SONY SRS-XB100"
         data-price="60"
-        data-image="image/sonysrs.jpg">
+        data-image="image/sonysrs.jpg"
+        data-description="Sans fil Bluetooth, compacte, légère, étanche IP67, avec autonomie de 16 heures.">
         Ajouter au panier</button>
       </div>
 
